--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,9 @@
 * {
   box-sizing: border-box;
 }
+li {
+  list-style-type: none;
+}
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
@@ -39,6 +42,17 @@ p {
   margin: 0;
 }
 
-ul {
-  list-style-type: none;
+.title-country {
+  font-family: 'Open Sans';
+  font-size: 20px;
 }
+.name-country {
+  font-family: 'Open Sans';
+  font-size: 40px;
+}
+.new-style {
+  font-family: 'Open Sans';
+  font-weight: bold;
+}
+
+/* nkflf */
