--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,24 +4,6 @@
 li {
   list-style-type: none;
 }
-
-body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
-  color: #212121;
-  line-height: 1.5;
-}
-
-#search-box {
-  font: inherit;
-  padding: 8px;
-  max-width: 320px;
-  margin-bottom: 16px;
-}
-
 ul,
 ol {
   list-style: none;
@@ -32,14 +14,45 @@ a {
   color: inherit;
   text-decoration: none;
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  margin: 0;
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: #212121;
+  line-height: 1.5;
+  background-color: #add8e6;
+}
+
+input {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  padding: 12px 16px;
+  width: 100%;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  outline: none;
+  transition: border-color 0.3s ease;
+}
+
+input:focus {
+  border-color: #4a90e2;
+}
+
+#search-box {
+  font: inherit;
+  padding: 8px;
+  max-width: 320px;
+  margin-bottom: 16px;
+  color: #212121;
+}
+
+.flag-wrapper {
+  display: flex;
+  gap: 15px;
+  align-items: center;
 }
 
 .title-country {
@@ -50,9 +63,57 @@ p {
   font-family: 'Open Sans';
   font-size: 40px;
 }
-.new-style {
+.p .new-style {
   font-family: 'Open Sans';
   font-weight: bold;
 }
 
-/* nkflf */
+.country-list {
+  margin-top: 24px;
+  list-style-type: none;
+  padding: 0;
+}
+
+.country-list li {
+  display: flex;
+  align-items: center;
+}
+
+.country-list .flag {
+  width: 50px;
+  height: 50px;
+}
+
+.country-info {
+  margin-top: 24px;
+}
+
+.country-info .wrapper {
+  display: flex;
+  align-items: center;
+  margin-bottom: 12px;
+}
+
+.country-info .flag {
+  width: 120px;
+  height: 80px;
+  margin-right: 24px;
+  border-radius: 4px;
+}
+
+.country-info .name {
+  font-size: 36px;
+  font-weight: bold;
+  margin-bottom: 12px;
+}
+
+.country-info .info {
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 6px;
+}
+
+.country-info .info-value {
+  font-size: 16px;
+  margin-bottom: 12px;
+}
